--- a/Responsive/LM_Examen_Alumnos.html
+++ b/Responsive/LM_Examen_Alumnos.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>LM_UD1_Ex01</title>
-	<link href="estilos.css" rel="stylesheet" type="text/css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>LM_UD1_Ex01</title>
+<link href="estilos.css" rel="stylesheet" type="text/css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -12,22 +12,22 @@
 		<h1>Examen LM 3ª Evaluación</h1>
 	</header>
 	<section>
-		<article id="uno">
+		<article>
 			<h2>Capa UNO</h2>
 		</article>
-		<article id="dos">
+		<article>
 			<h2>Capa DOS</h2>
 		</article>
-		<article id="tres">
+		<article>
 			<h2>Capa TRES</h2>
 		</article>
-		<article id="cuatro">
+		<article>
 			<h2>Capa CUATRO</h2>
 		</article>
-		<article id="cinco">
+		<article>
 			<h2>Capa CINCO</h2>
 		</article>
-		<article id="seis">
+		<article>
 			<h2>Capa SEIS</h2>
 		</article>
 	</section>
